# map2gazebo_docker

./: CMakeLists.txt  Dockerfile.map2gazebo  README.md  package.xml
.github/: Dockerfile
.github/workflows/: docker.yaml
config/: default.yaml  defaults.yaml
launch/: check_gazebo_world.launch  gazebo_world.launch  map2gazebo.launch  run_map2gazebo.launch
outputs/world/: map.world
scripts/: map2gazebo_create_world_launch.sh  map2gazebo_docker_run.sh  run_map2gazebo.sh
