<?xml version="1.0"?>
<package format="2">
  <name>map2gazebo_docker</name>
  <version>0.0.1</version>
  <description>The map2gazebo_docker package</description>

  <maintainer email="tatuhirobeike@gmail.com">ikebe</maintainer>

  <license>Apache-2.0 License</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>